--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 </li>
                 <li>
                     <div class="col-8">
-                        <p> 2007 - 2018
+                        <p> 2017 - 2018
                         </p>
 
                     </div>
@@ -543,7 +543,7 @@
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo3">
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
-                    <h4>
+                    <h4 class="">
                         Secondary Education - X (CBSE)                
                         </h4>
                 </button>
@@ -575,7 +575,7 @@
                 </li>
                 <li>
                     <div class="col-8">
-                        <p> 2006 - 2016
+                        <p> 2015 - 2016
                         </p>
 
                     </div>
@@ -695,7 +695,7 @@
         <!-- Copyright -->
         <div class="text-center pt-3" style="font-family:cursive;">
 
-            <a style="color: white; font-family:cursive;" href="">Thank You Visiting</a>
+            <a style="color: white; font-family:cursive;" href="">Thank You For Visiting</a>
         </div>
         <div class="text-center pt-2" style=" color:white">
 
