--- a/index.html
+++ b/index.html
@@ -582,6 +582,82 @@
                 </li>
             </ul>
         </div>
+
+        <div class="row mt-3">
+
+            <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#democert">
+
+                <button class="btn btn-link" style="color:cyan; text-decoration: none;">
+                    <h4>
+                      B.Sc (H) Computer Science
+                    </h4>
+                </button>
+
+
+            </div>
+
+            <div class="col-2 col-md-1  edu ">
+                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#democert" class="fas fa-plus"></i>
+                </button>
+
+
+            </div>
+
+        </div>
+        <div id="democert" class="collapse show">
+            <ul>
+                <li>
+                    <div class=" col-8 mt-2">
+                        <p>
+                            Android using Kotlin and Java </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p>Nagarro Carrer Bootcamp</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p> Mastering Data Structure and Algorithms using C++
+                        </p>
+
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p> Easy to Advanced Data Structure and Algorithms using Java
+                        </p>
+
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p> Kotlin for Beginners
+                        </p>
+
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p> Easy to Advanced Data Structure and Algorithms using Java
+                        </p>
+
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p> Machine Learning
+                        </p>
+
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+
+
+
     </div>
 
 
