--- a/index.html
+++ b/index.html
@@ -589,8 +589,7 @@
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
                     <h4>
-                      B.Sc (H) Computer Science
-                    </h4>
+Certificates                    </h4>
                 </button>
 
 
