changing edu font

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo">
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
-                    <h4>
+                    <h4 class="edu-font">
                       B.Sc (H) Computer Science
                     </h4>
                 </button>
@@ -495,7 +495,7 @@
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo2">
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
-                    <h4>
+                    <h4 class="edu-font">
                       Senior Secondary Education - XII (CBSE)
                     </h4>
                 </button>
@@ -514,19 +514,19 @@
         <div id="demo2" class="collapse show">
             <ul>
                 <li>
-                    <div class=" col-8 mt-2">
+                    <div class=" col-md-8 col-12 mt-2">
                         <p>
                             Navyug School, Delhi
                         </p>
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p>92% aggregate</p>
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p> 2017 - 2018
                         </p>
 
@@ -541,7 +541,7 @@
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo3">
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
-                    <h4 class="">
+                    <h4 class="edu-font">
                         Secondary Education - X (CBSE)                
                         </h4>
                 </button>
@@ -560,19 +560,19 @@
         <div id="demo3" class="collapse show">
             <ul>
                 <li>
-                    <div class=" col-8 mt-2">
+                    <div class=" col-md-8 mt-2 col-12">
                         <p>
                             Navyug School, Delhi
                         </p>
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p>9.4 CGPA</p>
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p> 2015 - 2016
                         </p>
 
@@ -586,8 +586,9 @@
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#democert">
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
-                    <h4>
-Certificates                    </h4>
+                    <h4 class="edu-font">
+                    Certificates                    
+                    </h4>
                 </button>
 
 
@@ -604,46 +605,39 @@ Certificates                    </h4>
         <div id="democert" class="collapse show">
             <ul>
                 <li>
-                    <div class=" col-8 mt-2">
+                    <div class="col-md-8 col-12 mt-2">
                         <p>
                             Android using Kotlin and Java </p>
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p>Nagarro Carrer Bootcamp</p>
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p> Mastering Data Structure and Algorithms using C++
                         </p>
 
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p> Easy to Advanced Data Structure and Algorithms using Java
                         </p>
 
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p> Kotlin for Beginners
                         </p>
 
                     </div>
                 </li>
                 <li>
-                    <div class="col-8">
-                        <p> Easy to Advanced Data Structure and Algorithms using Java
-                        </p>
-
-                    </div>
-                </li>
-                <li>
-                    <div class="col-8">
+                    <div class="col-md-8 col-12">
                         <p> Machine Learning
                         </p>
 
@@ -677,8 +671,9 @@ Certificates                    </h4>
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo4">
 
                 <button class="btn btn-link" style="color:cyan; text-decoration: none;">
-                    <h4>
-                        Technical Content Writer at GeeksForGeeks                    </h4>
+                    <h4 class="edu-font">
+                        Technical Content Writer at GeeksForGeeks                   
+                    </h4>
                 </button>
 
 
