--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
-    <link rel="stylesheet" type="text/css" href="src/style.css" />
-    <link rel="stylesheet" href="src/mobile-style.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/style.css" />
+    <link rel="stylesheet" href="CSS/mobile-style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css ">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -74,7 +74,7 @@
             </div>
         
             <div class="col-md-4  col-sm-7 col-8 offset-2 offset-md-1" >
-                <img src="assets/mac.png" class="rounded-circle " alt="mac" />
+                <img src="images/mac.png" class="rounded-circle " alt="mac" />
             </div>
             <div class="row mt-4">
                 <div class="col-md-3 col-3">
@@ -262,7 +262,7 @@
                 <hr class="divider" />
                 <div class="item row">
                     <a class="col-md-2 d-flex prj col-12" href="https://github.com/chetan767/Minds" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="assets/icons8-chat-96.png" alt="project name" />
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-chat-96.png" alt="project name" />
                     </a>
                     <div class="desc col-md-10 col-12">
                         <div class="row">
@@ -288,7 +288,7 @@
 
                 <div class="item row">
                     <a class="col-md-2 prj d-flex prj col-12" href="https://github.com/chetan767/Github-API-Android" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="assets/icons8-github-96.png" alt="project name" />
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-github-96.png" alt="project name" />
                     </a>
                     <div class="desc col-md-10 col-12">
                         <div class="row">
@@ -316,7 +316,7 @@
 
                 <div class="item row">
                     <a class="col-md-2 prj d-flex prj col-12" href="https://github.com/chetan767/Covid19IndiaTracker" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="assets/icons8-coronavirus-96.png" alt="project name" />
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-coronavirus-96.png" alt="project name" />
                     </a>
                     <div class="desc col-md-10 col-12">
                         <div class="row">
@@ -345,7 +345,7 @@
 
                 <div class="item row">
                     <a class="col-md-2 prj col-12 d-flex prj" href="https://github.com/chetan767/To-Do" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="assets/icons8-to-do-96.png" alt="project name" />
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-to-do-96.png" alt="project name" />
                     </a>
                     <div class="desc col-md-10 col-12">
                         <div class="row">
@@ -372,7 +372,7 @@
                 <!--//item-->
                 <div class="item row">
                     <a class="col-md-2 prj col-12 d-flex prj" href="https://github.com/chetan767/image-compression" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="assets/icons8-zip-96.png" alt="project name" />
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-zip-96.png" alt="project name" />
                     </a>
                     <div class="desc col-md-10 col-12">
                         <div class="row">
@@ -401,7 +401,7 @@
                 <!--//item-->
                 <div class="item row">
                     <a class="col-md-2 d-flex prj col-12 " href="https://github.com/chetan767/calculator-flutter" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="assets/icons8-calculator-96.png" alt="project name" />
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-calculator-96.png" alt="project name" />
                     </a>
                     <div class="desc col-md-10 col-12 ">
                         <div class="row ">
@@ -778,7 +778,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-    <script src="src/main.js "></script>
+    <script src="JS/main.js"></script>
 
 </body>
 
