--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                 <div class="mr-auto"></div>
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#profile">PROFILE <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" name="profile" id="nav-profile" href="#profile">PROFILE <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">PROJECTS</a>
+                        <a class="nav-link" name="projects" id="nav-projects" href="#projects">PROJECTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#education">EDUCATION</a>
+                        <a class="nav-link" name="education" id="nav-education" href="#education">EDUCATION</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#work">WORK</a>
+                        <a class="nav-link" name="work" id="nav-work" href="#work">WORK</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">CONTACT</a>
+                        <a class="nav-link" name="contact" id="nav-contact" href="#contact">CONTACT</a>
                     </li>
                 </ul>
             </div>
