--- a/index.html
+++ b/index.html
@@ -720,16 +720,14 @@
             <div class="col-12" style="color: white;">
                 <h1>
                     <u>Contact</u>
-
-
                 </h1>
             </div>
         </div>
-        <div class="bg-contact2">
-            <div class="container-contact2" style="opacity: 0.8;">
-                <div class="wrap-contact2">
-                    <form class="contact2-form validate-form" method="post" action="https://api.formcake.com/api/form/2f9b52c0-8046-4c92-897b-2f67d3624df2/submission">
 
+        <div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
+            <div class="container-contact2">
+                <div class="wrap-contact2">
+                    <form class="contact2-form validate-form">
                         <div class="wrap-input2 validate-input" data-validate="Name is required">
                             <input class="input2" type="text" name="name">
                             <span class="focus-input2" data-placeholder="NAME"></span>
@@ -749,14 +747,16 @@
                             <div class="wrap-contact2-form-btn">
                                 <div class="contact2-form-bgbtn"></div>
                                 <button class="contact2-form-btn">
-                                    Send Your Message
-                                </button>
+								Send Your Message
+							</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+
+
 
     </div>
     <footer class="text-center text-lg-start" style="background-color: black;">
