--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 
     <!-- ======= Contact Section ======= -->
 
-    <div class="container contact mt-5" id="contact">
+    <div class="container contact mt-5 mb-4" id="contact">
         <div class="row">
             <div class="col-12" style="color: white;">
                 <h1>
