--- a/index.html
+++ b/index.html
@@ -724,39 +724,38 @@
             </div>
         </div>
 
-        <div class="bg-contact2" style="background-image: url('images/bg-01.jpg');">
-            <div class="container-contact2">
-                <div class="wrap-contact2">
-                    <form class="contact2-form validate-form">
-                        <div class="wrap-input2 validate-input" data-validate="Name is required">
-                            <input class="input2" type="text" name="name">
-                            <span class="focus-input2" data-placeholder="NAME"></span>
-                        </div>
 
-                        <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                            <input class="input2" type="text" name="email">
-                            <span class="focus-input2" data-placeholder="EMAIL"></span>
-                        </div>
+        <div class="container-contact100">
+            <div class="contact100-map" id="google_map" data-map-x="40.722047" data-map-y="-73.986422" data-pin="images/icons/map-marker.png" data-scrollwhell="0" data-draggable="1"></div>
 
-                        <div class="wrap-input2 validate-input" data-validate="Message is required">
-                            <textarea class="input2" name="message"></textarea>
-                            <span class="focus-input2" data-placeholder="MESSAGE"></span>
-                        </div>
+            <div class="wrap-contact100">
+                <form class="contact100-form validate-form">
 
-                        <div class="container-contact2-form-btn">
-                            <div class="wrap-contact2-form-btn">
-                                <div class="contact2-form-bgbtn"></div>
-                                <button class="contact2-form-btn">
-								Send Your Message
-							</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                    <div class="wrap-input100 validate-input" data-validate="Please enter your name">
+                        <input class="input100" type="text" name="name" placeholder="Full Name">
+                        <span class="focus-input100"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Please enter email: e@a.x">
+                        <input class="input100" type="text" name="email" placeholder="Email">
+                        <span class="focus-input100"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Please enter your message">
+                        <textarea class="input100" name="message" placeholder="Your Message"></textarea>
+                        <span class="focus-input100"></span>
+                    </div>
+
+                    <div class="container-contact100-form-btn">
+                        <button class="contact100-form-btn">
+                            Send Email
+                        </button>
+                    </div>
+                </form>
+
+
             </div>
         </div>
-
-
 
     </div>
     <footer class="text-center text-lg-start" style="background-color: black;">
