--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 
     <!-- ======= Contact Section ======= -->
 
-    <div class="container contact mt-5" id="contact">
+    <div class="container contact mb-5 mt-5" id="contact">
         <div class="row">
             <div class="col-12" style="color: white;">
                 <h1>
@@ -725,37 +725,27 @@
                 </h1>
             </div>
         </div>
-        <div class="bg-contact2">
-            <div class="container-contact2" style="opacity: 0.8;">
-                <div class="wrap-contact2">
-                    <form class="contact2-form validate-form" method="post" action="https://api.formcake.com/api/form/2f9b52c0-8046-4c92-897b-2f67d3624df2/submission">
+        <div class="row d-flex mb-5 mt-5 justify-content-center">
+            <form>
 
-                        <div class="wrap-input2 validate-input" data-validate="Name is required">
-                            <input class="input2" type="text" name="name">
-                            <span class="focus-input2" data-placeholder="NAME"></span>
-                        </div>
-
-                        <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                            <input class="input2" type="text" name="email">
-                            <span class="focus-input2" data-placeholder="EMAIL"></span>
-                        </div>
-
-                        <div class="wrap-input2 validate-input" data-validate="Message is required">
-                            <textarea class="input2" name="message"></textarea>
-                            <span class="focus-input2" data-placeholder="MESSAGE"></span>
-                        </div>
-
-                        <div class="container-contact2-form-btn">
-                            <div class="wrap-contact2-form-btn">
-                                <div class="contact2-form-bgbtn"></div>
-                                <button class="contact2-form-btn">
-                                    Send Your Message
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+                <div class="form-group col-12 mt-5">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Enter Name">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
-            </div>
+                <div class="form-group col-12 mt-3">
+                    <label for="exampleInputPassword1"></laEmailbel>
+                    <input type="password" class="form-control" id="emal" placeholder="Enter Email">
+                </div>
+                <div class="form-group col-12 mt-3">
+                    <label for="exampleFormControlTextarea1">Message/label>
+                    <textarea class="form-control" id="message" placeholder="Enter Message" rows="3"></textarea>
+                </div>
+                <div class="col-12 d-flex justify-content-center mt-5">
+                    <button type="submit" class="btn btn-success">Submit</button>
+
+                </div>
+            </form>
         </div>
 
     </div>
