--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                 </div>
                 <div class="form-group col-12 mt-3">
                     <label for="exampleInputPassword1"></laEmailbel>
-                    <input type="password" class="form-control" id="emal" placeholder="Enter Email">
+                    <input type="email" class="form-control" id="emal" placeholder="Enter Email">
                 </div>
                 <div class="form-group col-12 mt-3">
                     <label for="exampleFormControlTextarea1">Message/label>
