--- a/index.html
+++ b/index.html
@@ -731,14 +731,13 @@
                 <div class="form-group col-12 mt-5">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter Name">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group col-12 mt-3">
-                    <label for="exampleInputPassword1"></laEmailbel>
-                    <input type="email" class="form-control" id="email" name="email"  placeholder="Enter Email">
+                    <label for="exampleInputPassword1"></label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
                 </div>
                 <div class="form-group col-12 mt-3">
-                    <label for="exampleFormControlTextarea1">Message/label>
+                    <label for="exampleFormControlTextarea1"></label>
                     <textarea class="form-control" id="message" name="message" placeholder="Enter Message" rows="3"></textarea>
                 </div>
                 <div class="col-12 d-flex justify-content-center mt-5">
