--- a/index.html
+++ b/index.html
@@ -740,8 +740,8 @@
                     <label for="exampleFormControlTextarea1"></label>
                     <textarea class="form-control" id="message" name="message" placeholder="Enter Message" rows="3"></textarea>
                 </div>
-                <div class="col-12 d-flex justify-content-center mt-5">
-                    <button type="submit" class="btn btn-success">Submit</button>
+                <div class="col-12 d-flex justify-content-center mt-5 mb-4">
+                    <button type="submit" style="background: linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935); color:white;" class="btn">Send Message</button>
 
                 </div>
             </form>
