minus in education collapse

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="content">
                 <!--//item-->
                 <hr class="divider" />
-                <div class="item row">
+                <div class="item row p-2">
                     <a class="col-md-2 d-flex prj col-12" href="https://github.com/chetan767/Minds" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-chat-96.png" alt="project name" />
                     </a>
@@ -286,7 +286,7 @@
                 </div>
                 <!--//item-->
 
-                <div class="item row">
+                <div class="item row  p-2">
                     <a class="col-md-2 prj d-flex prj col-12" href="https://github.com/chetan767/Github-API-Android" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-github-96.png" alt="project name" />
                     </a>
@@ -314,7 +314,7 @@
                 </div>
                 <!--//item-->
 
-                <div class="item row">
+                <div class="item row  p-2">
                     <a class="col-md-2 prj d-flex prj col-12" href="https://github.com/chetan767/Covid19IndiaTracker" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-coronavirus-96.png" alt="project name" />
                     </a>
@@ -343,7 +343,7 @@
                 </div>
                 <!--//item-->
 
-                <div class="item row">
+                <div class="item row  p-2">
                     <a class="col-md-2 prj col-12 d-flex prj" href="https://github.com/chetan767/To-Do" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-to-do-96.png" alt="project name" />
                     </a>
@@ -370,7 +370,7 @@
                     <!--//desc-->
                 </div>
                 <!--//item-->
-                <div class="item row">
+                <div class="item row  p-2">
                     <a class="col-md-2 prj col-12 d-flex prj" href="https://github.com/chetan767/image-compression" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-zip-96.png" alt="project name" />
                     </a>
@@ -399,7 +399,7 @@
                 </div>
                 <!--//item-->
                 <!--//item-->
-                <div class="item row">
+                <div class="item row  p-2">
                     <a class="col-md-2 d-flex prj col-12 " href="https://github.com/chetan767/calculator-flutter" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-calculator-96.png" alt="project name" />
                     </a>
@@ -440,7 +440,7 @@
                 </h1>
             </div>
         </div>
-        <div class="row mt-3">
+        <div class="row mt-3" data-toggle="collapse" data-target="#demo">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo">
 
@@ -454,7 +454,7 @@
             </div>
 
             <div class="col-2 col-md-1  edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo" class="fas fa-plus"></i>
+                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo" class="fas fa-minus"></i>
                 </button>
 
 
@@ -490,7 +490,7 @@
 
 
 
-        <div class="row mt-3">
+        <div class="row mt-3" data-toggle="collapse" data-target="#demo2">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo2">
 
@@ -504,7 +504,7 @@
             </div>
 
             <div class="col-2 col-md-1 edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo2" class="fas fa-plus"></i>
+                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo2" class="fas fa-minus"></i>
                 </button>
 
 
@@ -536,7 +536,7 @@
 
         </div>
 
-        <div class="row mt-3">
+        <div class="row mt-3" data-toggle="collapse" data-target="#demo3">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo3">
 
@@ -550,7 +550,7 @@
             </div>
 
             <div class="col-2 col-md-1 edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo3" class="fas fa-plus"></i>
+                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo3" class="fas fa-minus"></i>
                 </button>
 
 
@@ -581,7 +581,7 @@
             </ul>
         </div>
 
-        <div class="row mt-3">
+        <div class="row mt-3" data-toggle="collapse" data-target="#democert">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#democert">
 
@@ -595,7 +595,7 @@
             </div>
 
             <div class="col-2 col-md-1  edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#democert" class="fas fa-plus"></i>
+                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#democert" class="fas fa-minus"></i>
                 </button>
 
 
@@ -666,7 +666,7 @@
 
 
 
-        <div class="row mt-3">
+        <div class="row mt-3" data-toggle="collapse" data-target="#demo4">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo4">
 
@@ -680,7 +680,7 @@
             </div>
 
             <div class="col-2 col-md-1 edu ">
-                <button class="btn btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo4" class="fas fa-plus"></i>
+                <button class="btn btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo4" class="fas fa-minus"></i>
                 </button>
 
 
@@ -750,16 +750,16 @@
     </div>
     <footer class="text-center text-lg-start" style="background-color: black;">
         <!-- Copyright -->
-        <div class="text-center pt-1" style="font-family:cursive;">
+        <div class="text-center pt-1">
 
-            <a style="color: white; font-family:cursive;" href="">Thank You For Visiting</a>
+            <a style="color: white;" href="">Thank You For Visiting</a>
         </div>
         <div class="text-center pt-2" style=" color:white">
 
-            <a style="color: white; font-family:cursive;" href="">Made by Chetan Khanna</a>
+            <a style="color: white;" href="">Made by Chetan Khanna</a>
         </div>
         <div class="text-center pt-2 " style="color:white">
-            <b style="font-family:cursive;"> Copyright ©️ 2020 | All Rights Reserved</b>
+            <b> Copyright ©️ 2020 | All Rights Reserved</b>
         </div>
         <!-- Copyright -->
     </footer>
