btn-fix projects

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 </h1>
             </div>
         </div>
-        <div class="row mt-3" data-toggle="collapse" data-target="#demo">
+        <div class="row mt-3 cpdiv" data-toggle="collapse" data-target="#demo">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo">
 
@@ -454,7 +454,7 @@
             </div>
 
             <div class="col-2 col-md-1  edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo" class="fas fa-minus"></i>
+                <button class="btn  btn-link cp"> <i style="color:white;" data-toggle="collapse" data-target="#demo" class="fas fa-minus"></i>
                 </button>
 
 
@@ -490,7 +490,7 @@
 
 
 
-        <div class="row mt-3" data-toggle="collapse" data-target="#demo2">
+        <div class="row mt-3 cpdiv" data-toggle="collapse" data-target="#demo2">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo2">
 
@@ -504,7 +504,7 @@
             </div>
 
             <div class="col-2 col-md-1 edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo2" class="fas fa-minus"></i>
+                <button class="btn  btn-link cp"> <i style="color:white;" data-toggle="collapse" data-target="#demo2" class="fas fa-minus"></i>
                 </button>
 
 
@@ -536,7 +536,7 @@
 
         </div>
 
-        <div class="row mt-3" data-toggle="collapse" data-target="#demo3">
+        <div class="row mt-3 cpdiv" data-toggle="collapse" data-target="#demo3">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo3">
 
@@ -550,7 +550,7 @@
             </div>
 
             <div class="col-2 col-md-1 edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo3" class="fas fa-minus"></i>
+                <button class="btn  btn-link cp"> <i style="color:white;" data-toggle="collapse" data-target="#demo3" class="fas fa-minus"></i>
                 </button>
 
 
@@ -581,7 +581,7 @@
             </ul>
         </div>
 
-        <div class="row mt-3" data-toggle="collapse" data-target="#democert">
+        <div class="row mt-3 cpdiv" data-toggle="collapse" data-target="#democert">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#democert">
 
@@ -595,7 +595,7 @@
             </div>
 
             <div class="col-2 col-md-1  edu ">
-                <button class="btn  btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#democert" class="fas fa-minus"></i>
+                <button class="btn  btn-link cp"> <i style="color:white;" data-toggle="collapse" data-target="#democert" class="fas fa-minus"></i>
                 </button>
 
 
@@ -666,7 +666,7 @@
 
 
 
-        <div class="row mt-3" data-toggle="collapse" data-target="#demo4">
+        <div class="row mt-3 cpdiv" data-toggle="collapse" data-target="#demo4">
 
             <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo4">
 
@@ -680,7 +680,7 @@
             </div>
 
             <div class="col-2 col-md-1 edu ">
-                <button class="btn btn-link"> <i style="color:white;" data-toggle="collapse" data-target="#demo4" class="fas fa-minus"></i>
+                <button class="btn btn-link cp"> <i style="color:white;" data-toggle="collapse" data-target="#demo4" class="fas fa-minus"></i>
                 </button>
 
 
