btn color change

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
         <div class="row d-flex mb-5 mt-5 justify-content-center">
             <form method="post" action="https://api.formcake.com/api/form/2f9b52c0-8046-4c92-897b-2f67d3624df2/submission">
 
-                <div class="form-group col-12 mt-5">
+                <div class="form-group col-12">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter Name">
                 </div>
@@ -741,7 +741,7 @@
                     <textarea class="form-control" id="message" name="message" placeholder="Enter Message" rows="3"></textarea>
                 </div>
                 <div class="col-12 d-flex justify-content-center mt-5 mb-4">
-                    <button type="submit" style="background: linear-gradient(-135deg, #d5007d, #e53935, #d5007d, #e53935); color:white;" class="btn">Send Message</button>
+                    <button type="submit" style="background-color: #ff4600; color:white;" class="btn">Send Message</button>
 
                 </div>
             </form>
