--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         
             <div class="col-md-4  col-sm-7 col-8 offset-2 offset-md-1" >
-                <img src="images/mac.png" class="rounded-circle  " alt="mac" />
+                <img src="images/chetan.png" class="rounded-circle  " alt="mac" />
             </div>
             <div class="row mt-4">
                 <div class="col-md-3 col-3">
@@ -730,7 +730,7 @@
 
                 <div class="form-group col-12">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter Name">
+                    <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter Name">
                 </div>
                 <div class="form-group col-12 mt-3">
                     <label for="exampleInputPassword1"></label>
