--- a/index.html
+++ b/index.html
@@ -260,6 +260,32 @@
             <div class="content">
                 <!--//item-->
                 <hr class="divider" />
+
+                <div class="item row  p-2">
+                    <a class="col-md-2 d-flex prj col-12 " href="https://github.com/chetan767/Covid-Tracker-Flutter" target="_blank">
+                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-coronavirus-962.png" alt="project name" />
+                    </a>
+                    <div class="desc col-md-10 col-12 ">
+                        <div class="row ">
+                            <div class="col-md-3 d-flex prj">
+                                <h3 class="title"><a href="https://github.com/chetan767/Covid-Tracker-Flutter" target="_blank">Covid-19 Tracker
+                         
+                                </a></h3>
+                            </div>
+
+                            <div class="col-md-9 d-flex prj">
+                                <button type="button" class="btn btn-sizf btn-danger "><p class="pm">Flutter</p></button>
+                                <button type="button" class="btn btn-siz btn-warning "><p class="pm">Provider</p></button>
+
+                            </div>
+
+                        </div>
+
+                        <p class="mb-2 d-flex prj des-m">Flutter Application that tracks Covid-19 cases around the world and visualize them</p>
+                        <p><a class="more-link d-flex prj" href="https://github.com/chetan767/Covid-Tracker-Flutter" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                    </div>
+                    <!--//desc-->
+                </div>
                 <div class="item row p-2">
                     <a class="col-md-2 d-flex prj col-12" href="https://github.com/chetan767/Minds" target="_blank">
                         <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-chat-96.png" alt="project name" />
@@ -399,31 +425,6 @@
                 </div>
                 <!--//item-->
                 <!--//item-->
-                <div class="item row  p-2">
-                    <a class="col-md-2 d-flex prj col-12 " href="https://github.com/chetan767/calculator-flutter" target="_blank">
-                        <img class="img-fluid project-image rounded shadow-sm" src="images/icons8-calculator-96.png" alt="project name" />
-                    </a>
-                    <div class="desc col-md-10 col-12 ">
-                        <div class="row ">
-                            <div class="col-md-3 d-flex prj">
-                                <h3 class="title"><a href="https://github.com/chetan767/calculator-flutter" target="_blank">Calculator
-                         
-                                </a></h3>
-                            </div>
-
-                            <div class="col-md-9 d-flex prj">
-                                <button type="button" class="btn btn-sizf btn-danger "><p class="pm">Flutter</p></button>
-                                <button type="button" class="btn btn-siz btn-warning "><p class="pm">Dart</p></button>
-
-                            </div>
-
-                        </div>
-
-                        <p class="mb-2 d-flex prj des-m">Multiplatform Calculator Application in Flutter</p>
-                        <p><a class="more-link d-flex prj" href="https://github.com/chetan767/calculator-flutter" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
-                    </div>
-                    <!--//desc-->
-                </div>
             </div>
             <!--//content-->
         </div>
