--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css ">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="icon" href="images/CK.png">
+
+
+    <meta name="description" content="Personal Portfolio" />
+<meta name="title" property="og:title" content="Chetan Khanna" />
+<meta property="og:type" content="_" />
+<meta name="image" property="og:image" content="_" />
+<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Chetan Khanna" />
 </head>
+
 
 <body>
     <a href="#" id="scroll" style="display: none;"><span></span></a>
