--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="description" content="Personal Portfolio" />
 <meta name="title" property="og:title" content="Chetan Khanna" />
 <meta property="og:type" content="_" />
-<meta name="image" property="og:image" content="_" />
+<meta name="image" property="og:image" content="https://chetankhanna.me/images/show.png" />
 <meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Chetan Khanna" />
 </head>
 
