--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <link rel="icon" href="images/CK.png">
 
 
-    <meta name="description" content="Personal Portfolio" />
+<meta name="description" content=" I am a proficient mobile and web developer with a passion for beating former" />
 <meta name="title" property="og:title" content="Chetan Khanna" />
 <meta property="og:type" content="_" />
 <meta name="image" property="og:image" content="https://chetankhanna.me/images/show.png" />
-<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Chetan Khanna" />
+<meta name="description" property="og:description" content=" I am a proficient mobile and web developer with a passion for beating former best yets" />
+<meta name="author" content="Chetan Khanna" />
 </head>
 
 
@@ -64,7 +65,7 @@
 
                     <h1 class="abt-1">Hey, I am Chetan Khanna</h1>
                     <h6 class="mt-4 abt2">
-                        I am a proficient mobile developer and a competitive programmer with a passion for beating former "best yets"
+                        I am a proficient mobile and web developer with a passion for beating former "best yets". 
                     </h6>
                     <h2 class="mt-4">
                         <span style="color: rgb(53, 160, 196) ">#</span>
