--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <meta name="description" content=" I am a proficient mobile and web developer with a passion for beating former" />
 <meta name="title" property="og:title" content="Chetan Khanna" />
-<meta property="og:type" content="_" />
+<meta property="og:type" content="Portfolio" />
 <meta name="image" property="og:image" content="https://chetankhanna.me/images/show.png" />
 <meta name="description" property="og:description" content=" I am a proficient mobile and web developer with a passion for beating former best yets" />
 <meta name="author" content="Chetan Khanna" />
