--- a/index.html
+++ b/index.html
@@ -720,6 +720,49 @@
             </ul>
         </div>
 
+        <div class="row mt-3 cpdiv" data-toggle="collapse" data-target="#demo4">
+
+            <div class="col-md-7 col-10 edu" style="color: lawngreen; " data-toggle="collapse" data-target="#demo4">
+
+                <button class="btn btn-link" style="color:cyan; text-decoration: none;">
+                    <h4 class="edu-font">
+                        Flutter Developer at Global Alerts Ltd                   
+                    </h4>
+                </button>
+
+
+            </div>
+
+            <div class="col-2 col-md-1 edu ">
+                <button class="btn btn-link cp"> <i style="color:white;" data-toggle="collapse" data-target="#demo4" class="fas fa-minus"></i>
+                </button>
+
+
+            </div>
+
+        </div>
+        <div id="demo4" class="collapse show">
+            <ul>
+                <li>
+                    <div class=" col-8 mt-2">
+                        <p>
+                            Full Time </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p>Work from Home</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="col-8">
+                        <p> 2021 - Present
+                        </p>
+
+                    </div>
+                </li>
+            </ul>
+        </div>
 
     </div>
 
