--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta name="description" content=" I am a proficient mobile and web developer with a passion for beating former" />
 <meta name="title" property="og:title" content="Chetan Khanna" />
 <meta property="og:type" content="Portfolio" />
-<meta name="image" property="og:image" content="https://kapwi.ng/c/t2jUlIZs" />
+<meta name="image" property="og:image" content="show.jpeg" />
 <meta name="description" property="og:description" content=" I am a proficient mobile and web developer with a passion for beating former best yets" />
 <meta name="author" content="Chetan Khanna" />
 </head>
